--- a/BookStoreClient/package.json
+++ b/BookStoreClient/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+ "build": "ng build --configuration=production",
+"watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
@@ -22,7 +22,7 @@
     "jwt-decode": "^4.0.0",
     "ngx-infinite-scroll": "^17.0.0",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.10.5",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "^0.14.3"
   },
